--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-pygame
-esper
-pygbag
-pyinstaller
+altgraph==0.17.3
+esper==2.4.1
+greenlet==2.0.2
+macholib==1.16.2
+pygame==2.3.0
+pygbag==0.7.1
+pyinstaller==5.9.0
+pyinstaller-hooks-contrib==2023.1
+token-utils==0.1.8
+typing_extensions==4.5.0
